front_envoy/envoy-config.yaml
---
admin:
  access_log_path: "/tmp/admin_access.log"
  address: 
    socket_address: 
      address: "127.0.0.1"
      port_value: 9901
stats_sinks:
  -
    name: "envoy.statsd"
    config:
      tcp_cluster_name: "statsd-exporter"
      prefix: front-envoy    
static_resources: 
  listeners:
    - 
      name: "http_listener"
      address: 
        socket_address: 
          address: "0.0.0.0"
          port_value: 80
      filter_chains:
          filters:
            -
              name: "envoy.http_connection_manager"
              config:
                use_remote_address: true
                add_user_agent: true
                access_log:
                - name: envoy.file_access_log
                  config:
                    path: /dev/stdout
                    format: "[ACCESS_LOG][%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\" \"%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%\"\n"
                stat_prefix: "ingress_http"
                codec_type: "AUTO"
                generate_request_id: true
                tracing:
                  operation_name: "egress"
                route_config: 
                  name: "local_route"
                  virtual_hosts: 
                    - 
                      name: "http-route"
                      domains: 
                        - "*"
                      routes: 
                        -
                          match:
                            prefix: "/service/a"
                          route:
                            cluster: "service_a"
                        - match:
                            prefix: "/service/c"
                          route:
                              cluster: "service_c"
                        - match:
                            prefix: "/cart"
                          route:
                            cluster: "service_cart"
                          decorator:
                            operation: checkAvailability
                        - match:
                            prefix: "/user"
                          route:
                            cluster: "service_user"
                          decorator:
                            operation: checkAvailability
                        - match:
                            prefix: "/products"
                          route:
                            cluster: "service_products"
                          decorator:
                            operation: checkAvailability
                http_filters:
#                  - name: envoy.filters.http.jwt_authn
#                    config:
#                      providers:
#                        ecommerce-jwt:
##                          issuer: https://blog-samples.auth0.com/
##                          audiences:
##                          - https://contacts.blog-samples.com/
#                          forward: true
##                          local_jwks:
##                            inline_string: "-----BEGIN PUBLIC KEY-----
##                              MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAgIK2Wt4x2EtDl41C7vfp
##                              OsMquZMyOyteO2RsVeMLF/hXIeYvicKr0SQzVkodHEBCMiGXQDz5prijTq3RHPy2
##                              /5WJBCYq7yHgTLvspMy6sivXN7NdYE7I5pXo/KHk4nz+Fa6P3L8+L90E/3qwf6j3
##                              DKWnAgJFRY8AbSYXt1d5ELiIG1/gEqzC0fZmNhhfrBtxwWXrlpUDT0Kfvf0QVmPR
##                              xxCLXT+tEe1seWGEqeOLL5vXRLqmzZcBe1RZ9kQQm43+a9Qn5icSRnDfTAesQ3Cr
##                              lAWJKl2kcWU1HwJqw+dZRSZ1X4kEXNMyzPdPBbGmU6MHdhpywI7SKZT7mX4BDnUK
##                              eQIDAQAB
##                              -----END PUBLIC KEY-----"
#                          remote_jwks:
#                            http_uri:
#                              uri: http://authz:9080/certs
#                              cluster: ext-authz
#                          from_headers:
#                          - name: Authorization
#                            value_prefix: Bearer
#                      rules:
#                      - match:
#                          prefix: "/user"
#                        requires:
#                          provider_name: "ecommerce-jwt"
#                      - match:
#                          prefix: "/cart"
#                        requires:
#                          provider_name: "ecommerce-jwt"
                  - name: envoy.ext_authz
                    config:
                      http_service:
                        server_uri:
                          uri: authz:9080
                          cluster: ext-authz
                          timeout: 0.25s
                        allowed_request_headers:
                        - Authorization
#                  - name: envoy.ext_authz
#                    config:
#                      http_service:
#                        server_uri:
#                          uri: oauth-resource-server:9082
#                          cluster: ext-resource-server
#                          timeout: 0.25s
#                        allowed_request_headers:
#                        - Authorization

                  - name: "envoy.router"
                    config: {}
  clusters:
    -
      name: "statsd-exporter"
      connect_timeout: "0.25s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        -
          socket_address:
            address: "statsd_exporter"
            port_value: 9125
    - 
      name: "service_a"
      connect_timeout: "0.25s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        - 
          socket_address: 
            address: "service_a_envoy"
            port_value: 80
    - name: "service_c"
      connect_timeout: "0.25s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        - socket_address:
            address: "service_c_envoy"
            port_value: 80
    - name: "service_cart"
      connect_timeout: "0.25s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        - socket_address:
            address: "service_cart_envoy"
            port_value: 80
    - name: "service_user"
      connect_timeout: "0.25s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        - socket_address:
            address: "service_user_envoy"
            port_value: 80
    - name: "service_products"
      connect_timeout: "0.25s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        - socket_address:
            address: "service_products_envoy"
            port_value: 80
    - name: "zipkin"
      connect_timeout: 1s
      type: strict_dns
      lb_policy: "ROUND_ROBIN"
      hosts:
        - socket_address:
            address: "zipkin"
            port_value: 9411

    - name: ext-authz
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: authz
            port_value: 9080

    - name: ext-authz-server
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      hosts:
      - socket_address:
          address: authz-server
          port_value: 9081

    - name: ext-resource-server
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      hosts:
      - socket_address:
          address: oauth-resource-server
          port_value: 9082





tracing:
  http:
    name: "envoy.zipkin"
    config:
#      "@type": type.googleapis.com/envoy.config.trace.v2.ZipkinConfig
      collector_cluster: "zipkin"
      collector_endpoint: "/api/v1/spans"
#    typed_config:
#      "@type": type.googleapis.com/envoy.config.trace.v2.ZipkinConfig
#      collector_cluster: "zipkin"
#      collector_endpoint: "/api/v1/spans"
